--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <ul>
                 <li>
                     <a href="#">
-                        &copy; 2018 Angela Yu 
+                        &copy; 2018 Hawbash Z
                     </a>
                 </li>
                 <li>
